			  - 2003-02-07:  Added automatic filtering of private IP addresses passed as a proxy header  (Matteo)
			  - 2003-02-09:  Added warning when weight or target isn't set on campaign properties page  (Niels)
			  - 2003-02-11:  Added HTTP referer delivery limitation; it's working with local, js and xmlrpc invocations only  (Matteo)

			+ Misc bugfixes
			  - 2003-01-13:  If a zero was used in a random variable (ie. random:10) it wasn't replaced  (Niels)
			  - 2003-01-13:  If a random or timestamp variable was used in the destination URL of a HTML banner it wasn't replaced  (Niels)
			  - 2003-01-13:  Random variable replacement larger than 9 wasn't working at all for external banners when using plain remote invocation  (Niels)
			  - 2003-01-14:  Konqueror browser detection in adlayer wasn based on a very outdated useragent, now fixed  (Niels)
			  - 2003-01-14:  If register_globals was turned on and cookies were favored by variable_order, the value of a cookie overwrote a GET or POST variable with the same name  (Niels)
			  - 2003-01-14:  Priority wasn't recalculated during an update due to a typo  (Niels)
			  - 2003-01-16:  System unavailable message wasn't shown on publisher login during upgrade process  (Matteo)
			  - 2003-01-19:  If a setting in the config.inc.php file was updated which previously included a semi-colon the old value wasn't replaced correctly  (Niels)
			  - 2003-01-19:  After updating from Beta 6.1 or earlier some default values were still considered valid, resulting in problems with webserver stored banners  (Niels)
			  - 2003-01-19:  Setting the webserver banner settings to empty did not have any effect  (Niels)
			  - 2003-01-20:  Wildcard in source delivery limitation matched only a-z and 0-9, not other characters
			  - 2003-01-21:  Usernames were shown in the HTML source of the advertiser and publisher property pages when logged in as a regular user  (Niels)